--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 <body>
   <a href= "https://youtu.be/hqvcww4ydh8?list=RDhqvcww4ydh8" >Wait till i get my money right!</a>
   <p>wait and see</p>
+  <img src="mcgregor.jpg" height"200">
 </body>
 </html>
