--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
   <title>HAHAHAHAA</title>
 </head>
-<body>
+<bodystyle ="background-color : 230,190,138;" >
   <a href= "https://youtu.be/hqvcww4ydh8?list=RDhqvcww4ydh8" >Wait till i get my money right!</a>
   <p> <i>wait and see</i></p>
   <img src="mcgregor.jpg" height="200">
 </body>
 </html>
+
